--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -1911,7 +1911,7 @@
     "\n",
     "# === Construct full path to the video ===\n",
     "video_path = os.path.join(\n",
-    "    \"C:/Users/z5512000/OneDrive - UNSW/dataset/human36\", \n",
+    "    \"C:/pathto/dataset/human36\", \n",
     "    subject, \n",
     "    \"Videos\", \n",
     "    f\"{action}.{camera_id[view_2d]}.mp4\"\n",
@@ -1973,7 +1973,7 @@
     "\n",
     "# === Settings ===\n",
     "data_2d_file = 'data_2d_h36m_gt.npz'\n",
-    "video_root = r\"C:/Users/z5512000/OneDrive - UNSW/dataset/human36\"\n",
+    "video_root = r\"C:/pathto/dataset/human36\"\n",
     "subject = 'S1'\n",
     "action = 'Discussion'\n",
     "view_2d = 1\n",
@@ -2070,7 +2070,7 @@
     "\n",
     "# === Settings ===\n",
     "data_2d_file = 'data_2d_h36m_gt.npz'\n",
-    "video_root = r\"C:/Users/z5512000/OneDrive - UNSW/dataset/human36\"\n",
+    "video_root = r\"C:/pathto/dataset/human36\"\n",
     "subject = 'S1'\n",
     "action = 'Discussion'\n",
     "view_2d = 3\n",
@@ -2170,7 +2170,7 @@
     "dataset_2d = np.load(dataset_2d_file, allow_pickle=True)['positions_2d'].item()\n",
     "\n",
     "# Video path\n",
-    "video_path = f\"C:/Users/z5512000/OneDrive - UNSW/dataset/human36/{subject}/Videos/{action}.{camera_id[view_2d]}.mp4\"\n",
+    "video_path = f\"C:/pathto/dataset/human36/{subject}/Videos/{action}.{camera_id[view_2d]}.mp4\"\n",
     "cap = cv2.VideoCapture(video_path)\n",
     "\n",
     "# === Bones connection (17-joint Human3.6M) ===\n",
